<resources>
    <string name="app_name">Contact Lenses</string>
    <string name="addButton">Add</string>
    <string name="resetButton">Reset</string>
    <string name="numberView">Number of uses</string>
    <string name="dateView">Date of last use</string>

    <string name="title_activity_settings">Settings</string>
    <string name="limitCategoryTitle">Usage limit</string>
    <string name="langCategoryTitle">Language</string>
    <string name="limitCheckTitle">Limit notification</string>
    <string name="limitCheckSummary">Alert when you reach the limit</string>
    <string name="limitEditTitle">Usage limit</string>
    <string name="limitEditSummary">Set the limit</string>
    <string name="langListTitle">Language</string>
    <string name="langListSummary">Choose language</string>
    <string-array name="languages">
        <item>English</item>
        <item>Ελληνικά</item>
    </string-array>
    <string name="limitNotification">" uses left!"</string>
    <string name="error">Oops, something went wrong :(</string>
    <string name="reset">Reset was successful!</string>
</resources>
